# agents-enforcer

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.ebpf  README.md  ROADMAP.md  config.example.yaml  config.production.yaml  config.simple.yaml  deny.toml  run_server.rs  serve_dashboard.py
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: benchmark.yml  ci.yml  coverage.yml  dependency-review.yml  docs.yml  lint.yml  release.yml  tls-tap.yml
agent-gateway-enforcer/: Cargo.toml
agent-gateway-enforcer-admin/: Cargo.toml
agent-gateway-enforcer-admin/src/: api.rs  lib.rs  router.rs  views.rs
agent-gateway-enforcer-admin/static/: app.js  index.html  styles.css
agent-gateway-enforcer-cli/: Cargo.toml
agent-gateway-enforcer-cli/src/: main.rs
agent-gateway-enforcer-common/: Cargo.toml
agent-gateway-enforcer-common/src/: config.rs  lib.rs
agent-gateway-enforcer-controller/: Cargo.toml
agent-gateway-enforcer-controller/src/: aggregator.rs  aggregator_loop.rs  capability.rs  compiler.rs  controller.rs  crds.rs  distributor.rs  events.rs  events_server.rs  lib.rs  matching.rs  metrics.rs  metrics_server.rs  reconciler.rs  schedule.rs  state.rs
agent-gateway-enforcer-controller/tests/: events_ingest.rs  reconciler_e2e.rs
agent-gateway-enforcer-core/: Cargo.toml
agent-gateway-enforcer-core/examples/: web_server.rs
agent-gateway-enforcer-core/src/: events.rs  lib.rs  metrics.rs
agent-gateway-enforcer-core/src/backend/: error.rs  lifecycle.rs  mod.rs  platform.rs  registry.rs
agent-gateway-enforcer-core/src/config/: manager.rs  migration.rs  mod.rs  validators.rs
agent-gateway-enforcer-core/src/events/: aggregation.rs  bus.rs  export.rs  handlers.rs  mod.rs  streaming.rs
agent-gateway-enforcer-core/src/metrics/: collector.rs  exporter.rs  mod.rs  registry.rs  types.rs
agent-gateway-enforcer-core/src/web/: api.rs  mod.rs  static_files.rs  websocket.rs
agent-gateway-enforcer-core/static/: index.html
agent-gateway-enforcer-core/static/css/: main.css
agent-gateway-enforcer-core/static/js/: app.js
agent-gateway-enforcer-core/tests/: backend_lifecycle_tests.rs  config_tests.rs  event_tests.rs  metrics_tests.rs  web_server_tests.rs
agent-gateway-enforcer-core/tests/common/: mod.rs
agent-gateway-enforcer-ctl/: Cargo.toml
agent-gateway-enforcer-ctl/src/: format.rs  main.rs  prom.rs
agent-gateway-enforcer-ctl/src/commands/: capabilities.rs  gen_crds.rs  mod.rs  policies.rs  simulate.rs  violations.rs
agent-gateway-enforcer-ebpf/: Cargo.toml
agent-gateway-enforcer-ebpf/src/: main.rs
agent-gateway-enforcer-llm-proxy/: Cargo.toml
agent-gateway-enforcer-llm-proxy/src/: budget.rs  capabilities.rs  enforce.rs  handler.rs  lib.rs  metrics.rs  metrics_server.rs  pricing.rs  providers.rs  reporter.rs  sse.rs
agent-gateway-enforcer-llm-proxy/tests/: proxy_e2e.rs  proxy_streaming.rs
agent-gateway-enforcer-node-agent/: Cargo.toml  build.rs
agent-gateway-enforcer-node-agent/proto/: node_agent.proto
agent-gateway-enforcer-node-agent/src/: conversions.rs  lib.rs  metrics.rs  metrics_server.rs  reporter.rs  server.rs
agent-gateway-enforcer-webhook/: Cargo.toml
agent-gateway-enforcer-webhook/src/: handler.rs  lib.rs  validate.rs
agent-gateway-enforcer/src/: main.rs
backends/ebpf-linux/: Cargo.toml  build.rs
backends/ebpf-linux/ebpf/: Makefile  lsm.c  network.c  tls.c
backends/ebpf-linux/src/: decision_events.rs  lib.rs  migration.rs  registry.rs
backends/ebpf-linux/src/llm/: capability.rs  decision.rs  decoder.rs  mod.rs  reassembler.rs
backends/ebpf-linux/src/uprobes/: discovery.rs
backends/ebpf-linux/src/uprobes/recipes/: mod.rs  nodejs.rs  openssl.rs
backends/ebpf-linux/tests/: integration_tests.rs
backends/macos-desktop/: Cargo.toml
backends/macos-desktop/SystemExtension/: build.sh  project.yml
backends/macos-desktop/SystemExtension/AgentGatewayEnforcer/: AgentGatewayEnforcer.entitlements  AppDelegate.swift  Info.plist
backends/macos-desktop/SystemExtension/AgentGatewayEnforcer.xcodeproj/: project.pbxproj
backends/macos-desktop/SystemExtension/FileSecurityExtension/: FileSecurityExtension.entitlements  FileSecurityExtension.swift  Info.plist  main.swift
backends/macos-desktop/SystemExtension/Shared/: blocked.json
backends/macos-desktop/examples.disabled/: ui_test.rs
backends/macos-desktop/src/: lib.rs  registry.rs
backends/macos-desktop/src/ui/: menu_bar.rs  mod.rs  preferences.rs  prompts.rs  system_integration.rs
deploy/: rbac.yaml
deploy/crds/: agentcapabilities.agents.enforcer.io.yaml  agentpolicies.agents.enforcer.io.yaml  agentviolations.agents.enforcer.io.yaml  enforcerconfigs.agents.enforcer.io.yaml  gatewaycatalogs.agents.enforcer.io.yaml
deploy/grafana/: agents-enforcer-overview.json
deploy/pricing/: default.yaml
docs/: architecture.md  k8s-controller-plan.md  operations.md  writing-policies.md
examples/: config-example.yaml  demo_runner.rs  web-server-example.rs
examples/simulate/: catalog.yaml  policy.yaml
scripts/: setup-dev.sh  setup-linux-vm.sh  validate-config.py
src/: lib.rs  test_utils.rs
tests/: backend_integration_tests.rs  cli_integration_tests.rs  configuration_tests.rs  event_system_tests.rs  integration_suite.rs  integration_test.rs  metrics_tests.rs  platform_tests.rs  test_utils.rs  web_interface_tests.rs
tests/modules/: backend_integration_tests.rs  cli_integration_tests.rs  configuration_tests.rs  event_system_tests.rs  metrics_tests.rs  platform_tests.rs  web_interface_tests.rs
tls-tap/: Cargo.toml  Dockerfile  README.md
tls-tap/bpf/: Cargo.toml  README.md
tls-tap/bpf/src/: main.rs
tls-tap/deploy/helm/tls-tap/: Chart.yaml  values.yaml
tls-tap/deploy/helm/tls-tap/templates/: daemonset.yaml
tls-tap/scripts/: smoke.sh
tls-tap/shared/: Cargo.toml
tls-tap/shared/src/: lib.rs
tls-tap/src/: event.rs  lib.rs  reassembler.rs  tap_linux.rs
tls-tap/src/uprobes/: discovery.rs  elf.rs  mod.rs
tls-tap/src/uprobes/recipes/: nodejs.rs  openssl.rs
xtask/: Cargo.toml
xtask/src/: main.rs
(+21 files in other folders)
