[workspace]
resolver = "2"
members = [
    "agent-gateway-enforcer-core",
    "agent-gateway-enforcer-cli",
    "agent-gateway-enforcer-common",
    "backends/ebpf-linux",
    "backends/macos-desktop",
    "agent-gateway-enforcer",         # Legacy compatibility shim
    "xtask",
]

# Root package for integration tests
[package]
name = "agent-gateway-enforcer-tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
agent-gateway-enforcer-common = { path = "agent-gateway-enforcer-common" }
agent-gateway-enforcer-core = { path = "agent-gateway-enforcer-core" }
libc = "0.2"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tempfile = { workspace = true }
uuid = { version = "1.0", features = ["v4"] }
lazy_static = "1.4"

[dev-dependencies]

[workspace.dependencies]
# Core dependencies
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Metrics
prometheus = "0.13"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Web/HTTP
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.5", features = ["trace"] }

# eBPF
aya = { version = "0.12", features = ["async_tokio"] }
aya-ebpf = "0.1"
aya-log = "0.2"

# Configuration
toml = "0.8"
serde_yaml = "0.9"

# File watching and validation
notify = "6.1"
regex = "1.10"
glob = "0.3"

# Testing utilities
tempfile = "3.8"

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3

[profile.dev.package."*"]
opt-level = 3