[package]
name = "agent-gateway-enforcer-cli"
version = "0.1.0"
edition = "2021"
authors = ["Agent Gateway Enforcer Team"]
description = "Unified CLI for agent gateway enforcement across all platforms"
license = "MIT"

[[bin]]
name = "agent-gateway-enforcer"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Local dependencies
agent-gateway-enforcer-core = { path = "../agent-gateway-enforcer-core" }
agent-gateway-enforcer-common = { path = "../agent-gateway-enforcer-common" }

# Platform-specific backends
[target.'cfg(target_os = "linux")'.dependencies]
ebpf-linux = { path = "../backends/ebpf-linux", package = "agent-gateway-enforcer-backend-ebpf-linux" }

[target.'cfg(target_os = "macos")'.dependencies]
macos-desktop = { path = "../backends/macos-desktop", package = "agent-gateway-enforcer-backend-macos" }

[features]
default = []
