[package]
name = "agent-gateway-enforcer-common"
version = "0.1.0"
edition = "2021"
description = "Shared types for agent-gateway-enforcer eBPF and userspace"

[features]
default = []
user = []

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
toml = { workspace = true }
serde_yaml = { workspace = true }

# Linux-specific dependencies (aya for eBPF)
[target.'cfg(target_os = "linux")'.dependencies]
aya = { workspace = true, optional = true }

[lib]
path = "src/lib.rs"
