[package]
name = "agent-gateway-enforcer-common"
version = "0.1.0"
edition = "2021"
description = "Shared types for agent-gateway-enforcer eBPF and userspace"

[features]
default = []
user = []

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
toml = { workspace = true }
serde_yaml = { workspace = true }

# aya is only available on Linux - the cfg guards in lib.rs control when Pod impls are used
[target.'cfg(target_os = "linux")'.dependencies]
aya = { workspace = true }

[lib]
path = "src/lib.rs"
