[package]
name = "agent-gateway-enforcer-controller"
version = "0.1.0"
edition = "2021"
authors = ["Agent Gateway Enforcer Team"]
description = "Kubernetes controller + CRD types for agent gateway enforcement"
license = "MIT"

[dependencies]
agent-gateway-enforcer-core = { path = "../agent-gateway-enforcer-core" }
# Client-side only: node-agent is pulled in without the `server`
# feature so aya / libbpf are not transitively required to build
# the controller.
agent-gateway-enforcer-node-agent = { path = "../agent-gateway-enforcer-node-agent", default-features = false }
tonic = "0.10"
prometheus = { workspace = true }
once_cell = "1.19"

serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
futures = "0.3"
clap = { workspace = true }

# Kubernetes
kube = { workspace = true }
k8s-openapi = { workspace = true }
schemars = { workspace = true }

# SHA-256 for PolicyBundle hash derivation.
sha2 = "0.10"
hex = "0.4"

[[bin]]
name = "enforcer-controller"
path = "src/bin/controller.rs"

[dev-dependencies]
tokio = { workspace = true }
tempfile = { workspace = true }
agent-gateway-enforcer-backend-ebpf-linux = { path = "../backends/ebpf-linux" }
