[package]
name = "agent-gateway-enforcer-core"
version = "0.1.0"
edition = "2021"
authors = ["Agent Gateway Enforcer Team"]
description = "Platform-agnostic core for agent gateway enforcement"
license = "MIT"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
prometheus = { workspace = true }
toml = { workspace = true }
serde_yaml = { workspace = true }

# File watching and validation
notify = { workspace = true }
regex = { workspace = true }
glob = { workspace = true }

# Local dependencies
agent-gateway-enforcer-common = { path = "../agent-gateway-enforcer-common", default-features = false }

[features]
default = []
user = ["agent-gateway-enforcer-common/user"]

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
