[package]
name = "agent-gateway-enforcer-core"
version = "0.1.0"
edition = "2021"
authors = ["Agent Gateway Enforcer Team"]
description = "Platform-agnostic core for agent gateway enforcement"
license = "MIT"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
prometheus = { workspace = true }
toml = { workspace = true }
serde_yaml = { workspace = true }
chrono = { workspace = true }

# File watching and validation
notify = { workspace = true }
regex = { workspace = true }
glob = { workspace = true }

# Event system dependencies
uuid = { version = "1.6", features = ["v4", "serde"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = { version = "0.3" }

# Web server dependencies
warp = "0.3"
tokio-tungstenite = "0.20"
reqwest = { version = "0.11", features = ["json"] }
hyper = "0.14"
bytes = "1.5"

# Platform dependencies
libc = "0.2"

# Local dependencies
agent-gateway-enforcer-common = { path = "../agent-gateway-enforcer-common", features = ["user"] }

[features]
default = []
user = ["agent-gateway-enforcer-common/user"]

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
