[package]
name = "agent-gateway-enforcer-ebpf"
version = "0.1.0"
edition = "2021"
description = "eBPF program for agent gateway enforcement"

[dependencies]
aya-ebpf = "0.1"
aya-log-ebpf = "0.1"
agent-gateway-enforcer-common = { path = "../agent-gateway-enforcer-common", default-features = false }

[[bin]]
name = "agent-gateway-enforcer-ebpf"
path = "src/main.rs"

[profile.dev]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
