[package]
name = "agent-gateway-enforcer-llm-proxy"
version = "0.1.0"
edition = "2021"
authors = ["Agent Gateway Enforcer Team"]
description = "OpenAI-compatible LLM gateway enforcing AgentCapability cost + model + tool rules"
license = "MIT"

[dependencies]
agent-gateway-enforcer-controller = { path = "../agent-gateway-enforcer-controller" }

serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json", "stream"] }
clap = { workspace = true }
chrono = { workspace = true }
prometheus = { workspace = true }
once_cell = "1.19"
parking_lot = "0.12"
futures = "0.3"
async-stream = "0.3"

[dev-dependencies]
# Bring up an ephemeral upstream in tests to exercise the full
# request path without hitting a real LLM API.
tower = { workspace = true }
tempfile = { workspace = true }
tokio-stream = "0.1"
bytes = "1"

[[bin]]
name = "enforcer-llm-proxy"
path = "src/bin/llm_proxy.rs"
