[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
description = "Build tooling for agent-gateway-enforcer"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde_yaml = { workspace = true }
kube = { workspace = true }
agent-gateway-enforcer-controller = { path = "../agent-gateway-enforcer-controller" }
