[package]
name = "agent-gateway-enforcer-backend-ebpf-linux"
version = "0.1.0"
edition = "2021"
authors = ["Agent Gateway Enforcer Team"]
description = "Linux eBPF backend for agent gateway enforcement"
license = "MIT"
build = "build.rs"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
toml = "0.8"
serde_yaml = "0.9"
parking_lot = "0.12"
# ELF symbol resolution for the uprobe attachment framework.
# `object` is the standard Rust crate for this; written by
# Rust team, no-std-friendly, handles every ELF we care about.
object = { version = "0.32", default-features = false, features = ["std", "read_core", "elf"] }

# CLI dependencies
clap = { version = "4.0", features = ["derive"] }
tracing-subscriber = "0.3"
tempfile = "3.0"

# Local dependencies
agent-gateway-enforcer-core = { path = "../../agent-gateway-enforcer-core" }
agent-gateway-enforcer-common = { path = "../../agent-gateway-enforcer-common" }

# eBPF dependencies (Linux only)
[target.'cfg(target_os = "linux")'.dependencies]
aya = { version = "0.12", features = ["async_tokio"] }

[build-dependencies]
# Build dependencies for eBPF compilation

[features]
default = []
