[package]
name = "agent-gateway-enforcer-backend-macos"
version = "0.1.0"
edition = "2021"
authors = ["Agent Gateway Enforcer Team"]
description = "macOS desktop backend for agent gateway enforcement"
license = "MIT"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }

# Local dependencies
agent-gateway-enforcer-core = { path = "../../agent-gateway-enforcer-core" }
agent-gateway-enforcer-common = { path = "../../agent-gateway-enforcer-common", features = ["user"] }

# macOS UI dependencies
cocoa = "0.25"
objc = "0.2"
objc-foundation = "0.1"
objc_id = "0.1"
core-foundation = "0.9"
core-graphics = "0.25"

[features]
default = []
