[package]
name = "tls-tap-bpf"
version = "0.1.0"
edition = "2021"
description = "tls-tap eBPF program. Compiles to BPF bytecode via aya-ebpf."
license = "MIT OR Apache-2.0"
publish = false

[lib]
crate-type = ["staticlib"]
path = "src/main.rs"

[dependencies]
tls-tap-shared = { path = "../shared" }
aya-ebpf = "0.1"

[profile.dev]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
codegen-units = 1
